# safecmd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  test_cp_recursive.sh
docs/: DESIGN.md  DESIGN_CP.md  DESIGN_mv.md  DESIGN_rm.md
src/: allowlist.rs  config.rs  gitignore.rs  lib.rs  main.rs  strategy.rs
src/commands/cp/: args.rs  handlers.rs  mod.rs
src/commands/mv/: args.rs  mod.rs
src/commands/rm/: args.rs  handlers.rs  mod.rs  strategy.rs
src/config/: mod.rs
src/notifications/: mod.rs
tests/: allowlist_integration.rs  config_allowed_directories_integration.rs  config_allowlist_integration.rs  config_scope_integration.rs  cp_integration.rs  gitignore_integration.rs  gitignore_simple.rs  mv_integration.rs  nested_gitignore_recursive.rs  rm_integration.rs  trash_integration.rs
