[package]
name = "safecmd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
ignore = "0.4.23"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
trash = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
