cargo-features = ["edition2024"]
[package]
name = "safecmd"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.24"
toml = "0.9"
trash = "5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
